# simple_tri

./: CMakeLists.txt  Context.cpp  Main.cpp
